--- a/Sarlatan/package.json
+++ b/Sarlatan/package.json
@@ -32,7 +32,11 @@
             "cordova-plugin-screen-orientation": {},
             "cordova-plugin-vibration": {},
             "cordova-plugin-device": {},
-            "cordova-plugin-file": {}
+            "cordova-plugin-file": {},
+            "cordova-plugin-admobpro": {
+                "ADMOB_APP_ID": "ca-app-pub-6629294346381579/5323647476",
+                "PLAY_SERVICES_VERSION": "16.0.0"
+            }
         },
         "platforms": [
             "android",
